# compile-time-fsm

./: .clang-format  .clang-tidy  .dir-locals.el  .envrc  .gitignore  LICENSE  Makefile  README.md  channels-lock.scm  channels.scm  flake.nix  manifest.scm  meson.build
scripts/: amalgamate.scm  amalgamate.sh
single-include/: fsm.hpp
src/: meson.build
src/fsm/: ctfsm.hpp  fsm.hpp  fsm_single_include.hpp  meson.build
src/fsm/traits/: checked_fsm.hpp  exit_events_extractor.hpp  final_state.hpp  id_types_verifier.hpp  nested_filter.hpp  parent_injector.hpp  remove_final_states.hpp  state_expander.hpp  valid_fsm.hpp  validators_extractor.hpp  variant_builder.hpp
src/utility/: existence_verifier.hpp  function_signature.hpp  meson.build  type_map.hpp  type_set.hpp
test/: catch_main.cpp  fsm.cpp  meson.build  utility_test.cpp
